base-struct minor changes, testing node recolor  on-click

--- a/src/base-struct/index.html
+++ b/src/base-struct/index.html
@@ -11,92 +11,92 @@
         <script src="index.js"></script>
         <div class="cuatrimestre">
         <h2>Curso de Ingreso</h2>
-        <li class="node">Matemática</li>
-        <li class="node">Física</li>
+        <div class="node" id="mat_ingreso">Matemática</div>
+        <div class="node" id="fis_ingreso">Física</div>
     </div>
     <div class="cuatrimestre">
         <h2>Primer Cuatrimestre</h2>
-        <li class="node">Análisis Matemático I</li>
-        <li class="node">Álgebra I</li>
-        <li class="node">Introducción a Ingeniería</li>
-        <li class="node">Filosofía General</li>
-        <li class="node">Programación I</li>
+        <div class="node" id="anmat1">Análisis Matemático I</div>
+        <div class="node" id="alg1">Álgebra I</div>
+        <div class="node" id="intring">Introducción a Ingeniería</div>
+        <div class="node" id="filo">Filosofía General</div>
+        <div class="node" id="prog1">Programación I</div>
     </div>
     <div class="cuatrimestre">
         <h2>Segundo Cuatrimestre</h2>
-        <li class="node">Análisis Matemático II</li>
-        <li class="node">Álgebra II</li>
-        <li class="node">Física Mecánica</li>
-        <li class="node">Técnicas Digitales</li>
-        <li class="node">Programación II</li>
+        <div class="node" id="anmat2">Análisis Matemático II</div>
+        <div class="node" id="alg2">Álgebra II</div>
+        <div class="node" id="fis1">Física Mecánica</div>
+        <div class="node" id="td">Técnicas Digitales</div>
+        <div class="node" id="prog2">Programación II</div>
     </div>
     <div class="cuatrimestre">
         <h2>Tercer Cuatrimestre</h2>
-        <li class="node">Arquitectura de Computadoras</li>
-        <li class="node">Algoritmos y Estructuras de Datos</li>
-        <li class="node">Análisis Matemático III</li>
-        <li class="node">Álgebra III</li>
-        <li class="node">Electricidad y Magnetismo</li>
-        <li class="node">Teología</li>
+        <div class="node" id="arqcomp">Arquitectura de Computadoras</div>
+        <div class="node" id="ayed">Algoritmos y Estructuras de Datos</div>
+        <div class="node" id="anmat3">Análisis Matemático III</div>
+        <div class="node" id="alg3">Álgebra III</div>
+        <div class="node" id="fis2">Electricidad y Magnetismo</div>
+        <div class="node" id="teo">Teología</div>
     </div>
     <div class="cuatrimestre">
         <h2>Cuarto Cuatrimestre</h2>
-        <li class="node">Sistemas Operativos</li>
-        <li class="node">Análisis y Diseño de Algoritmos</li>
-        <li class="node">Estadística I</li>
-        <li class="node">Bases de Datos</li>
-        <li class="node">Antropología</li>
-        <li class="node">Matemática Discreta</li>
-        <li class="node">Cálculo Numérico</li>
+        <div class="node" id="so">Sistemas Operativos</div>
+        <div class="node" id="anaydis">Análisis y Diseño de Algoritmos</div>
+        <div class="node" id="est1">Estadística I</div>
+        <div class="node" id="alg1">Bases de Datos</div>
+        <div class="node">Antropología</div>
+        <div class="node">Matemática Discreta</div>
+        <div class="node">Cálculo Numérico</div>
     </div>
     <div class="cuatrimestre">   
         <h2>Quinto Cuatrimestre</h2>
-        <li class="node">Teoría de la Empresa</li>
-        <li class="node">Estadística II </li>
-        <li class="node">Laboratorio I</li>
-        <li class="node">Redes de Comunicación de Datos</li>
-        <li class="node">Electrónica Informática</li>
-        <li class="node">Ética General</li>
-        <li class="node">Diseño de Sistemas</li>
+        <div class="node">Teoría de la Empresa</div>
+        <div class="node">Estadística II </div>
+        <div class="node">Laboratorio I</div>
+        <div class="node">Redes de Comunicación de Datos</div>
+        <div class="node">Electrónica Informática</div>
+        <div class="node">Ética General</div>
+        <div class="node">Diseño de Sistemas</div>
     </div>
     <div class="cuatrimestre">
         <h2>Sexto Cuatrimestre</h2>
-        <li class="node">Ingeniería de Sistemas</li>
-        <li class="node">Laboratorio II </li>
-        <li class="node">Lenguajes de Programación</li>
-        <li class="node">Diseño de Interacción</li>
-        <li class="node">Moral, Persona y Valores</li>
-        <li class="node">Investigación Operativa</li>
+        <div class="node">Ingeniería de Sistemas</div>
+        <div class="node">Laboratorio II </div>
+        <div class="node">Lenguajes de Programación</div>
+        <div class="node">Diseño de Interacción</div>
+        <div class="node">Moral, Persona y Valores</div>
+        <div class="node">Investigación Operativa</div>
     </div>
     <div class="cuatrimestre">
         <h2>Séptimo Cuatrimestre</h2>
-        <li class="node">Laboratorio III (Anual)</li>
-        <li class="node">Aseguramiento de la Calidad del Software</li>
-        <li class="node">Seguridad Informática</li>
-        <li class="node">Programación Concurrente</li>
-        <li class="node">Ética Profesional</li>
-        <li class="node">Investigación Operativa</li>
+        <div class="node">Laboratorio III (Anual)</div>
+        <div class="node">Aseguramiento de la Calidad del Software</div>
+        <div class="node">Seguridad Informática</div>
+        <div class="node">Programación Concurrente</div>
+        <div class="node">Ética Profesional</div>
+        <div class="node">Investigación Operativa</div>
     </div>
     <div class="cuatrimestre">
         <h2>Octavo Cuatrimestre</h2>
-        <li class="node">Laboratorio III (Anual)</li>
-        <li class="node">Legal</li>
-        <li class="node">Comunicación Efectiva</li>
-        <li class="node">Sistemas Distribuidos</li>
-        <li class="node">Responsabilidad Social</li>
+        <div class="node">Laboratorio III (Anual)</div>
+        <div class="node">Legal</div>
+        <div class="node">Comunicación Efectiva</div>
+        <div class="node">Sistemas Distribuidos</div>
+        <div class="node">Responsabidivdad Social</div>
     </div>
     <div class="cuatrimestre">
         <h2>Noveno Cuatrimestre</h2>
-        <li class="node">Trabajo de Grado (Anual)</li>
-        <li class="node">Dirección de Proyectos</li>
-        <li class="node">Microeconomía Aplicada</li>
+        <div class="node">Trabajo de Grado (Anual)</div>
+        <div class="node">Dirección de Proyectos</div>
+        <div class="node">Microeconomía Aplicada</div>
     </div>  
         <div class="cuatrimestre">
         <h2>Décimo Cuatrimestre</h2>
-        <li class="node">Trabajo de Grado (Anual)</li>
-        <li class="node">Macroeconomía</li>
-        <li class="node">Laboratorio IV</li>
-        <li class="node">Factor Humano</li> 
+        <div class="node">Trabajo de Grado (Anual)</div>
+        <div class="node">Macroeconomía</div>
+        <div class="node">Laboratorio IV</div>
+        <div class="node">Factor Humano</div> 
         </div>
     </div>
 </body>
