Added applyStyles function onClick for nodes

--- a/src/base-struct/index.html
+++ b/src/base-struct/index.html
@@ -83,7 +83,7 @@
         <div class="node">Legal</div>
         <div class="node">Comunicación Efectiva</div>
         <div class="node">Sistemas Distribuidos</div>
-        <div class="node">Responsabidivdad Social</div>
+        <div class="node">Responsabilidad Social</div>
     </div>
     <div class="cuatrimestre">
         <h2>Noveno Cuatrimestre</h2>
